--- a/server/resources/participant.html
+++ b/server/resources/participant.html
@@ -4,151 +4,157 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Experiment Tracking</title>
+  <title>Hobby Tracking Study</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="min-h-screen bg-slate-950 text-slate-100 flex items-center justify-center">
-  <div class="w-full max-w-xl mx-auto p-6">
-    <header class="mb-6 text-center">
-      <h1 class="text-2xl font-semibold tracking-tight">Hobby Tracking Experiment</h1>
-      <p class="mt-2 text-sm text-slate-400" id="participant-label">Loading your assignment...</p>
+  <div class="w-full max-w-xl mx-auto p-6 space-y-5">
+    <header class="text-center space-y-1">
+      <h1 class="text-xl font-semibold tracking-tight">Daily Hobby Tracking</h1>
+      <p id="participant-label" class="text-xs text-slate-400">Loading your assignment...</p>
     </header>
 
-    <div id="status-card" class="rounded-2xl border border-slate-800 bg-slate-900/70 shadow-xl p-5 space-y-4">
-      <div class="flex items-center justify-between gap-4">
-        <div>
-          <div id="condition-label" class="text-xs font-semibold uppercase tracking-[0.16em] text-slate-500">Condition
-          </div>
-          <div id="condition-value" class="text-lg font-semibold text-slate-50">Loading...</div>
-        </div>
-        <div class="text-right text-xs text-slate-500">
-          <div id="access-indicator"
-            class="inline-flex items-center gap-1 px-2 py-1 rounded-full bg-emerald-500/10 text-emerald-400 border border-emerald-500/30">
-            <span class="w-1.5 h-1.5 rounded-full bg-emerald-400 animate-pulse"></span>
-            <span>Access active</span>
-          </div>
+    <section id="status-card"
+      class="rounded-3xl border border-slate-800 bg-slate-900/90 shadow-2xl px-5 py-6 space-y-5 backdrop-blur">
+      <div class="flex items-center justify-between gap-4 text-[10px] text-slate-500">
+        <p id="condition-value" class="opacity-60">Study condition: <span id="condition-code">—</span></p>
+        <div id="access-indicator"
+          class="inline-flex items-center gap-1 px-2 py-1 rounded-full bg-emerald-500/10 text-emerald-400 border border-emerald-500/30">
+          <span class="w-1.5 h-1.5 rounded-full bg-emerald-400 animate-pulse"></span>
+          <span>Access active</span>
         </div>
       </div>
 
-      <div id="condition-message" class="text-sm text-slate-300 leading-relaxed">
-        Checking your condition...
+      <div id="condition-message" class="space-y-2 text-center">
+        <!-- Filled dynamically per condition -->
       </div>
 
-      <div class="pt-2 border-t border-slate-800 flex items-center justify-between gap-4">
-        <div class="flex flex-col text-xs text-slate-500">
-          <span id="tracking-label">Current status:</span>
+      <div class="pt-3 border-t border-slate-800 flex items-center justify-between gap-4">
+        <div class="flex flex-col text-[10px] text-slate-500">
+          <span>Tracking status</span>
           <span id="tracking-status" class="text-sm font-medium text-slate-100">Loading...</span>
         </div>
         <button id="tracking-toggle"
-          class="inline-flex items-center justify-center px-4 py-2 rounded-full text-sm font-medium bg-slate-700 text-slate-50 hover:bg-slate-600 disabled:opacity-40 disabled:cursor-not-allowed transition-colors">
+          class="inline-flex items-center justify-center px-4 py-2.5 rounded-full text-sm font-medium bg-slate-700 text-slate-50 hover:bg-slate-600 disabled:opacity-40 disabled:cursor-not-allowed transition-colors">
           Loading...
         </button>
       </div>
-    </div>
+    </section>
 
-    <p class="mt-4 text-center text-[10px] text-slate-500">
-      Please keep this page open while tracking. Closing or refreshing the page will not lose your progress.
+    <p class="text-[10px] text-center text-slate-500">
+      This page is part of a research study. Please follow the instructions provided in your invitation.
     </p>
   </div>
 
   <script>
     (function () {
-      const stateEndpoint = (userId) => `/api/${encodeURIComponent(userId)}/state`;
-      const startEndpoint = (userId) => `/api/${encodeURIComponent(userId)}/start_tracking`;
-      const stopEndpoint = (userId) => `/api/${encodeURIComponent(userId)}/stop_tracking`;
+      const $ = (id) => document.getElementById(id);
+      const participantLabel = $("participant-label");
+      const conditionCode = $("condition-code");
+      const conditionMessage = $("condition-message");
+      const trackingStatus = $("tracking-status");
+      const trackingToggle = $("tracking-toggle");
+      const accessIndicator = $("access-indicator");
 
-      const participantLabel = document.getElementById('participant-label');
-      const conditionLabel = document.getElementById('condition-label');
-      const conditionValue = document.getElementById('condition-value');
-      const conditionMsg = document.getElementById('condition-message');
-      const trackingStatus = document.getElementById('tracking-status');
-      const trackingToggle = document.getElementById('tracking-toggle');
-      const accessIndicator = document.getElementById('access-indicator');
+      const getUserIdFromPath = () => {
+        const parts = window.location.pathname.split("/").filter(Boolean); // expect /p/:userId
+        return parts.length >= 2 && parts[0] === "p" ? decodeURIComponent(parts[1]) : null;
+      };
 
-      function getUserId() {
-        const parts = window.location.pathname.split('/').filter(Boolean);
-        // Expect /p/:userId
-        return parts.length >= 2 && parts[0] === 'p' ? decodeURIComponent(parts[1]) : null;
-      }
+      const stateUrl = (userId) => `/api/${encodeURIComponent(userId)}/state`;
+      const startUrl = (userId) => `/api/${encodeURIComponent(userId)}/start_tracking`;
+      const stopUrl = (userId) => `/api/${encodeURIComponent(userId)}/stop_tracking`;
 
-      async function fetchState(userId) {
-        const res = await fetch(stateEndpoint(userId), { cache: 'no-store' });
-        if (!res.ok) {
-          throw new Error(`State request failed: ${res.status}`);
-        }
+      const fetchState = async (userId) => {
+        const res = await fetch(stateUrl(userId), { cache: "no-store" });
+        if (!res.ok) throw new Error(`State request failed: ${res.status}`);
         return res.json();
-      }
+      };
 
-      function renderCondition(condition, userId) {
-        const upper = (condition || '').toUpperCase();
-        conditionValue.textContent = upper || 'Unknown';
+      const hourSeededFriends = () => {
+        const hour = new Date().getHours();
+        const seeded = Math.abs(Math.sin(hour * 37)) * 9; // 0-9
+        return 5 + Math.floor(seeded); // 5-13
+      };
 
-        if (upper === 'B') {
-          // Pseudo-random but stable per hour: seed with hour, derive 0..8, then map to 5..13
-          const hour = new Date().getHours();
-          const seeded = Math.abs(Math.sin(hour * 37)) * 9; // 0..9 (exclusive)
-          const friendsCount = 5 + Math.floor(seeded); // 5..13
+      const renderCondition = (condition, userId) => {
+        const cond = (condition || "").toUpperCase();
+        conditionCode.textContent = cond || "—";
 
-          conditionLabel.textContent = 'Your view';
-          conditionMsg.innerHTML =
-            "<span class='font-semibold text-emerald-400'>Live friend stats:</span> " +
-            "<span id='friends-counter' class='font-medium text-slate-100'>" +
-            friendsCount +
-            "</span> friends are currently tracking their hobbies today.";
-        } else if (upper === 'A') {
-          conditionLabel.textContent = 'Private mode';
-          conditionMsg.textContent = 'Private mode – friend activity hidden. You can still track your own hobby as part of this study.';
+        const sharedIntro = `
+          <p class="text-xs text-slate-400">
+            Please use this page to record whether you engaged in your hobby today.
+          </p>
+        `;
+
+        if (cond === "B") {
+          const friendsCount = hourSeededFriends();
+          conditionMessage.innerHTML = `
+            <div class="flex flex-col items-center gap-1">
+              <div class="text-[10px] uppercase tracking-[0.16em] text-emerald-400/80">Your circle today</div>
+              <div class="text-4xl font-semibold text-emerald-400 leading-none">${friendsCount}</div>
+              <div class="text-xs text-slate-300">friends are currently spending time on their hobbies.</div>
+            </div>
+            ${sharedIntro}
+          `;
+        } else if (cond === "A") {
+          conditionMessage.innerHTML = `
+            <div class="flex flex-col items-center gap-1">
+              <div class="text-[10px] uppercase tracking-[0.16em] text-slate-500/80">Private view</div>
+              <div class="text-xs text-slate-300">
+                You do not see others' activity here. Your entries are stored privately for this study.
+              </div>
+            </div>
+            ${sharedIntro}
+          `;
         } else {
-          conditionLabel.textContent = 'Condition';
-          conditionMsg.textContent = 'Condition information unavailable. You can still use the tracker if enabled.';
+          conditionMessage.innerHTML = `
+            ${sharedIntro}
+            <p class="text-xs text-slate-500 mt-1">Condition information is currently unavailable.</p>
+          `;
         }
-      }
+      };
 
-      function renderTrackingControls(condition, state, userId) {
+      const renderTrackingControls = (condition, state, userId) => {
         const isTracking = !!state.tracking_timestamp;
-        const upper = (condition || '').toUpperCase();
 
         trackingStatus.textContent = isTracking
-          ? 'Tracking is active.'
-          : 'Not currently tracking.';
+          ? "Tracking is active."
+          : "Not currently tracking.";
 
-        if (isTracking) {
-          trackingToggle.textContent = 'Stop tracking';
-          trackingToggle.classList.remove('bg-emerald-500', 'hover:bg-emerald-400');
-          trackingToggle.classList.add('bg-rose-500', 'hover:bg-rose-400');
-        } else {
-          trackingToggle.textContent = 'Start tracking';
-          trackingToggle.classList.remove('bg-rose-500', 'hover:bg-rose-400');
-          trackingToggle.classList.add('bg-emerald-500', 'hover:bg-emerald-400');
-        }
-
+        trackingToggle.textContent = isTracking ? "Stop tracking" : "Start tracking";
+        trackingToggle.classList.toggle("bg-emerald-500", !isTracking);
+        trackingToggle.classList.toggle("hover:bg-emerald-400", !isTracking);
+        trackingToggle.classList.toggle("bg-rose-500", isTracking);
+        trackingToggle.classList.toggle("hover:bg-rose-400", isTracking);
         trackingToggle.disabled = false;
 
         trackingToggle.onclick = async () => {
           try {
             trackingToggle.disabled = true;
-            const endpoint = isTracking ? stopEndpoint(userId) : startEndpoint(userId);
-            const res = await fetch(endpoint, { method: 'POST' });
-            if (!res.ok) throw new Error('Failed to update tracking');
-            const newState = await res.json();
-            const newCond = newState.current_condition || upper;
-            renderTrackingControls(newCond, newState, userId);
+            const url = isTracking ? stopUrl(userId) : startUrl(userId);
+            const res = await fetch(url, { method: "POST" });
+            if (!res.ok) throw new Error("Failed to update tracking");
+            const next = await res.json();
+            const nextCond = next.current_condition || condition;
+            renderTrackingControls(nextCond, next, userId);
           } catch (err) {
             console.error(err);
-            trackingStatus.textContent = 'Error updating tracking. Please try again.';
+            trackingStatus.textContent = "Error updating tracking. Please try again.";
           } finally {
             trackingToggle.disabled = false;
           }
         };
-      }
+      };
 
-      async function init() {
-        const userId = getUserId();
+      (async function init() {
+        const userId = getUserIdFromPath();
         if (!userId) {
-          participantLabel.textContent = 'Missing participant ID.';
-          conditionValue.textContent = 'Error';
-          conditionMsg.textContent = 'This page must be accessed via your personalized link.';
+          participantLabel.textContent = "Missing participant ID.";
+          conditionMessage.innerHTML = `
+            <p class="text-xs text-slate-400">This page must be opened via your personalized study link.</p>
+          `;
           trackingToggle.disabled = true;
           return;
         }
@@ -158,21 +164,28 @@
         try {
           const state = await fetchState(userId);
           const condition = state.current_condition || state.condition;
-
           renderCondition(condition, userId);
           renderTrackingControls(condition, state, userId);
         } catch (err) {
           console.error(err);
-          conditionValue.textContent = 'Unavailable';
-          conditionMsg.textContent = 'We could not verify your access. Please check your link or try again later.';
+          conditionMessage.innerHTML = `
+            <p class="text-xs text-slate-400">
+              We could not verify your access at this time. Please check your link or try again later.
+            </p>`;
           trackingToggle.disabled = true;
-          accessIndicator.classList.remove('bg-emerald-500/10', 'text-emerald-400', 'border-emerald-500/30');
-          accessIndicator.classList.add('bg-rose-500/10', 'text-rose-400', 'border-rose-500/30');
-          accessIndicator.textContent = 'No active access';
+          accessIndicator.classList.remove(
+            "bg-emerald-500/10",
+            "text-emerald-400",
+            "border-emerald-500/30"
+          );
+          accessIndicator.classList.add(
+            "bg-rose-500/10",
+            "text-rose-400",
+            "border-rose-500/30"
+          );
+          accessIndicator.textContent = "No active access";
         }
-      }
-
-      init();
+      })();
     })();
   </script>
 </body>
